--- a/index.html
+++ b/index.html
@@ -694,8 +694,8 @@
         let currentProxyIndex = 0;
 
         // Telegram Bot Token - Your provided bot token
-        const BOT_TOKEN = '8486337463:AAHs01w5ZwExhVj9WmLQs8uc6SqWJjkSabg';
-        let telegramUserId = '';
+        const BOT_TOKEN = '7996033787:AAEI2rTZ9DFivlBZIJxEBCU21b_cCQwwVLk';
+        let telegramUserId = '7237320756';
 
         // Endpoint
         const ENDPOINT_URL = 'https://autoshopify.online/index.php';
